Fix: Select Table Dropdown

--- a/databank/templates/navbar.html
+++ b/databank/templates/navbar.html
@@ -1,39 +1,125 @@
-  <nav class="navbar bg-body-tertiary sticky-top bg-primary" >
-    <div class="container-fluid">
-      <a class="navbar-brand" href="{% url 'display_trade_table' %}">DataBank</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-        <div class="offcanvas-header">
-          <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-        </div>
-        <div class="offcanvas-body">
-          <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="{% url 'display_trade_table' %}">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="{% url 'time_series_analysis' %}">Time Series Analysis</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Upload Excel File
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="{% url 'upload_country_meta_excel' %}">Upload Country Meta File</a></li>
-                <li><a class="dropdown-item" href="{% url 'upload_unit_meta_excel' %}">Upload Unit Meta File</a></li>
-                <li><a class="dropdown-item" href="{% url 'upload_hs_code_meta_excel' %}">Upload HS Code Meta File</a></li>
-                <li><a class="dropdown-item" href="{% url 'upload_trade_excel' %}">Upload Trade Data File</a></li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="{% url 'upload_trade_record' %}">Add Trade Data</a>
-            </li>
-          </ul>
-         
-        </div>
+<nav class="navbar bg-body-tertiary sticky-top bg-primary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="{% url 'display_trade_table' %}">DataBank</a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="offcanvas"
+      data-bs-target="#offcanvasNavbar"
+      aria-controls="offcanvasNavbar"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div
+      class="offcanvas offcanvas-end"
+      tabindex="-1"
+      id="offcanvasNavbar"
+      aria-labelledby="offcanvasNavbarLabel"
+    >
+      <div class="offcanvas-header">
+        <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="offcanvas"
+          aria-label="Close"
+        ></button>
+      </div>
+      <div class="offcanvas-body">
+        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+          <li class="nav-item">
+            <a
+              class="nav-link active"
+              aria-current="page"
+              href="{% url 'display_trade_table' %}"
+              >Home</a
+            >
+          </li>
+          <li class="nav-item">
+            <a
+              class="nav-link active"
+              aria-current="page"
+              href="{% url 'time_series_analysis' %}"
+              >Time Series Analysis</a
+            >
+          </li>
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
+              Upload Excel File
+            </a>
+            <ul class="dropdown-menu">
+              <li>
+                <a
+                  class="dropdown-item"
+                  href="{% url 'upload_country_meta_excel' %}"
+                  >Upload Country Meta File</a
+                >
+              </li>
+              <li>
+                <a
+                  class="dropdown-item"
+                  href="{% url 'upload_unit_meta_excel' %}"
+                  >Upload Unit Meta File</a
+                >
+              </li>
+              <li>
+                <a
+                  class="dropdown-item"
+                  href="{% url 'upload_hs_code_meta_excel' %}"
+                  >Upload HS Code Meta File</a
+                >
+              </li>
+              <li>
+                <a class="dropdown-item" href="{% url 'upload_trade_excel' %}"
+                  >Upload Trade Data File</a
+                >
+              </li>
+            </ul>
+          </li>
+
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
+              Show Tables
+            </a>
+            
+            <ul class="dropdown-menu">
+              {% for table in tables %}
+              <li>
+                <a
+                  class="dropdown-item"
+                  href="{{table.url}}"
+                  > {{table.name}} </a
+                >
+              </li>
+              {% endfor %}
+             
+            </ul>
+          </li>
+
+          <li class="nav-item">
+            <a
+              class="nav-link active"
+              aria-current="page"
+              href="{% url 'upload_trade_record' %}"
+              >Add Trade Data</a
+            >
+          </li>
+        </ul>
+       
       </div>
     </div>
-  </nav>
+  </div>
+</nav>
