forest urls and views fixed

--- a/databank/templates/navbar.html
+++ b/databank/templates/navbar.html
@@ -100,7 +100,7 @@
               <li>
                 <a
                   class="dropdown-item"
-                  href="{{table.url}}"
+                  href="{% url table.url %}"
                   > {{table.name}} </a
                 >
               </li>
