--- a/databank/general_data/templates/general_data/forest_table.html
+++ b/databank/general_data/templates/general_data/forest_table.html
@@ -1,3 +1,166 @@
 {% extends 'main.html' %} {% block content %}
-<h1>Forest table</h1>
+<button
+  class="btn btn-primary btn-sm px-4"
+  data-bs-toggle="collapse"
+  data-bs-target="#collapseFilter"
+  aria-expanded="false"
+  aria-controls="collapseFilter"
+>
+  Filters
+</button>
+
+<div class="bg-light mt-2">
+  <div class="collapse shadow rounded-2 p-4" id="collapseFilter">
+    <form class="row g-3" method="GET" action=".">
+      <!-- <div class="form-group col-12">
+                <div class="input-group">
+                    <input class="form-control py-2 border-right-0 border" type="search"
+                        name="currency_product_originDestination"
+                        placeholder="Search by Currency Type, Product Information or Origin/Destination" />
+    
+                </div>
+            </div> -->
+
+      <div class="col-md-3">
+        <label for="date_minimum">Calender Date Minimum</label>
+        <input
+          type="date"
+          class="form-control"
+          id="date_minimum"
+          name="date_min"
+        />
+      </div>
+      <div class="col-md-3">
+        <label for="date_maximum">Calender Date Maximum</label>
+        <input
+          type="date"
+          class="form-control"
+          id="date_maximum"
+          name="date_max"
+        />
+      </div>
+
+      <div class="col-md-3">
+        <label for="ViewNameOfPlant">Name of the plant </label>
+        <input
+          type="text"
+          class="form-control"
+          id="view_plant_Name"
+          placeholder="e.g. saal"
+          name="name_of_the_plant"
+        />
+      </div>
+      <div class="form-group col-md-3">
+        <label for="country_category">Country</label>
+        <select
+          id="country_category"
+          class="form-control"
+          name="country_category"
+        >
+          <option selected>--</option>
+          {% for country_category in country_categories %}
+          <option value="{{country_category.id}}">{{country_category}}</option>
+          {% endfor %}
+        </select>
+      </div>
+      <div class="col-md-3">
+        <label for="viewAreaUnit">Area Unit</label>
+        <select id="area_unit" name="area_unit" class="form-control">
+          <option selected>--</option>
+          {% for area_unit in area_unit_categories %}
+          <option value="{{area_unit.id}}">{{area_unit}}</option>
+          {% endfor %}
+        </select>
+      </div>
+      <div class="col-md-3">
+        <label for="viewStockAvailable">Stock Available</label>
+        <input
+          type="number"
+          min="0"
+          class="form-control"
+          id="viewStockAvailable"
+          placeholder="1000"
+          name="stock_available"
+        />
+      </div>
+      <div class="col-md-3 d-flex align-items-end">
+        <button type="submit" class=" btn btn-primary">
+          Search
+        </button> 
+      </div>
+    </form>
+  </div>
+</div>
+
+<table class="table table-striped table-bordered table-sm">
+    <thead>
+      <tr>
+        <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
+          Year
+        </th>
+        <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
+          Country
+        </th>
+        <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
+            Name_Of_The_Plant
+        </th>
+        <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
+            Scientific_Name
+        </th>
+        <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
+            Local_Name
+        </th>
+        <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
+            Stock_Unit
+        </th>
+        <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
+            Stock_Available
+        </th>
+        <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
+            Area_Unit
+        </th>
+        <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
+            Area_Covered
+        </th>
+        <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
+            Action
+        </th>
+      </tr>
+    </thead>
+    <tbody class="table-hover">
+      {% for record in page %}
+      <tr>
+        <td>{{ record.Year }}</td>
+        <td>{{ record.Country }}</td>
+        <td>{{ record.Name_Of_The_Plant }}</td>
+        <td>{{ record.Scientific_Name }}</td>
+        <td>{{ record.Local_Name }}</td>
+        <td>{{ record.Stock_Unit }}</td>
+        <td>{{ record.Stock_Available }}</td>
+        <td>{{ record.Area_Unit }}</td>
+        <td>{{ record.Area_Covered }}</td>
+        <td class="d-flex">
+          <div class="btn btn-outline-danger">
+            <a
+              class="styled-link"
+              href="{% url 'delete_trade_record' record.id %}"
+              >Delete</a
+            >
+          </div>
+
+          <div class="btn btn-outline-primary">
+            <a
+              class="styled-link"
+              href="{% url 'update_trade_record' record.id %}"
+              >Edit</a
+            >
+          </div>
+        </td>
+      </tr>
+
+      {% endfor %}
+    </tbody>
+  </table>
+  
+  
 {% endblock %}
