forest data filteration

--- a/databank/general_data/templates/general_data/forest_table.html
+++ b/databank/general_data/templates/general_data/forest_table.html
@@ -11,7 +11,7 @@
 
 <div class="bg-light mt-2">
   <div class="collapse shadow rounded-2 p-4" id="collapseFilter">
-    <form class="row g-3" method="GET" action=".">
+    <form class="row g-3" method="GET" action="./forest_table">
       <!-- <div class="form-group col-12">
                 <div class="input-group">
                     <input class="form-control py-2 border-right-0 border" type="search"
