--- a/databank/general_data/templates/general_data/forest_table.html
+++ b/databank/general_data/templates/general_data/forest_table.html
@@ -98,37 +98,37 @@
     <table class="table table-striped table-bordered table-sm">
       <thead>
         <tr>
-          <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
+          <th class="bg-primary text-white fw-semibold fs-6 px-2  " scope="col">
             <input type="checkbox" name="record.id" value="record.id" id="prodect_delete">
           </th>
-          <th class="bg-primary text-white fst-normal fw-normal fs-6 p-2 px-5" scope="col">
+          <td class="bg-primary text-white fst-normal fw-normal  " scope="col">
             Year
-          </th>
-          <th class="bg-primary text-white fst-normal fw-normal fs-6 p-2 px-5" scope="col">
+          </td>
+          <th class="bg-primary text-white fst-normal fw-normal fs-6  " scope="col">
             Country
           </th>
-          <th class="bg-primary text-white fst-normal fw-normal fs-6 p-2 px-5" scope="col">
+          <th class="bg-primary text-white fst-normal fw-normal fs-6 " scope="col">
               Name_Of_The_Plant
           </th>
-          <th class="bg-primary text-white fst-normal fw-normal fs-6 p-2 px-5" scope="col">
+          <th class="bg-primary text-white fst-normal fw-normal fs-6 " scope="col">
               Scientific_Name
           </th>
-          <th class="bg-primary text-white fst-normal fw-normal fs-6 p-2" scope="col">
+          <th class="bg-primary text-white fst-normal fw-normal fs-6" scope="col">
               Local_Name
           </th>
-          <th class="bg-primary text-white fst-normal fw-normal fs-6 p-2" scope="col">
+          <th class="bg-primary text-white fst-normal fw-normal fs-6" scope="col">
               Stock_Unit
           </th>
-          <th class="bg-primary text-white fst-normal fw-normal fs-6 p-2" scope="col">
+          <th class="bg-primary text-white fst-normal fw-normal fs-6 " scope="col">
               Stock_Available
           </th>
-          <th class="bg-primary text-white fst-normal fw-normal fs-6 p-2" scope="col">
+          <th class="bg-primary text-white fst-normal fw-normal fs-6" scope="col">
               Area_Unit
           </th>
-          <th class="bg-primary text-white fst-normal fw-normal fs-6 p-2" scope="col">
+          <th class="bg-primary text-white fst-normal fw-normal fs-6" scope="col">
               Area_Covered
           </th>
-          <th class="bg-primary text-white fst-normal fw-normal fs-6 p-2" scope="col">
+          <th class="bg-primary text-white fst-normal fw-normal fs-6" scope="col">
               Action
           </th>
         </tr>
