--- a/databank/templates/main.html
+++ b/databank/templates/main.html
@@ -44,6 +44,15 @@
           checkbox.checked = selectAllCheckbox.checked;
         });
       }
+
+      function confirmDeleteAll() {
+        var confirmDelete = confirm(
+          "Are you sure you want to delete all selected items?"
+        );
+        if (confirmDelete) {
+          document.getElementById("delete-form").submit();
+        }
+      }
     </script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
