--- a/databank/trade_data/templates/trade_data/display_trade_table.html
+++ b/databank/trade_data/templates/trade_data/display_trade_table.html
@@ -124,177 +124,174 @@
 </div>
 {% else %}
 <div>
-  <div class="table-responsive mt-4 bg-light p-3">
-    <div class="d-flex align-items-center justify-content-between mb-3">
-      <span class="text-danger fs-6 fw-lighter mb-1">
-        * {{data_len}} records found.
-      </span>
+  <form method="post" action="{% url 'delete_selected' %}" id="delete-form">
+    {% csrf_token %}
+    <div class="table-responsive mt-4 bg-light p-3">
+      <div class="d-flex align-items-center justify-content-between mb-3">
+        <span class="text-danger fs-6 fw-lighter mb-1">
+          * {{data_len}} records found.
+        </span>
 
-      <div class="d-flex align-items-center">
-        <a href="" class="border p-2 styled-link mx-3 hover-shadow" 
-          ><i class="fa-regular fa-trash-can" style="color: #ff0000"></i>
-          <span>Delete Selected</span>
-        </a>
-        <a
-          href="{% url 'export_to_excel' %}?{{ request.GET.urlencode }}"
-          class="border p-2 styled-link"
-        >
-          <i class="fa-solid fa-table"></i>
-          <span>Export to Excel</span>
-        </a>
+        <div class="d-flex align-items-center">
+          <button type="button" class="btn border p-2 styled-link mx-3 hover-shadow" onclick="confirmDeleteAll()">
+            <i class="fa-regular fa-trash-can" style="color: #ff0000"></i>
+              <span>Delete Selected</span>
+            </a>
+          </button>
+          <a
+            href="{% url 'export_to_excel' %}?{{ request.GET.urlencode }}"
+            class="border p-2 styled-link"
+          >
+            <i class="fa-solid fa-table"></i>
+            <span>Export to Excel</span>
+          </a>
+        </div>
       </div>
 
-      <!-- <form method="GET" action="{% url 'export_to_excel'  %}">
-        <button type="submit">
-          <i class="fa-solid fa-table"></i> 
-          <span>Export to Excel</span>
-        </button>
-      </form> -->
+      <table class="table table-striped table-bordered table-sm">
+        <thead>
+          <tr>
+            <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
+              <input
+                type="checkbox"
+                id="select-all"
+                onclick="toggleSelectAll()"
+              />
+            </th>
+            <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
+              Trade_Types
+            </th>
+            <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
+              Calender
+            </th>
+            <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
+              Fiscal_Year
+            </th>
+            <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
+              Duration
+            </th>
+            <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
+              Country_Name
+            </th>
+            <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
+              HS_Code
+            </th>
+            <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
+              Product_Information
+            </th>
+            <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
+              Unit
+            </th>
+            <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
+              Quantity
+            </th>
+            <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
+              Currency_Type
+            </th>
+            <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
+              Amount
+            </th>
+            <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
+              Tarrif
+            </th>
+            <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
+              Origin_Destination
+            </th>
+            <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
+              TradersName_ExporterImporter
+            </th>
+            <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
+              Documents
+            </th>
+            <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
+              Action
+            </th>
+          </tr>
+        </thead>
+        <tbody class="table-hover">
+          {% for record in page %}
+          <tr>
+            <td>
+              <input
+                type="checkbox"
+                class="item-checkbox"
+                name="selected_items"
+                value="{{ record.id }}"
+              />
+            </td>
+            <td>{{ record.Trade_Type }}</td>
+            <td>{{ record.Calender }}</td>
+            <td>{{ record.Fiscal_Year }}</td>
+            <td>{{ record.Duration }}</td>
+            <td>{{ record.Country }}</td>
+            <td>{{ record.HS_Code }}</td>
+            <td>{{ record.HS_Code.Product_Information }}</td>
+            <td>{{ record.Unit }}</td>
+            <td>{{ record.Quantity }}</td>
+            <td>{{ record.Currency_Type }}</td>
+            <td>{{ record.Amount }}</td>
+            <td>{{ record.Tarrif }}</td>
+            <td>{{ record.Origin_Destination }}</td>
+            <td>{{ record.TradersName_ExporterImporter }}</td>
+            <td>{{ record.DocumentsLegalProcedural }}</td>
+            <td class="d-flex">
+              <div class="btn btn-outline-danger">
+                <a
+                  class="styled-link"
+                  href="{% url 'delete_trade_record' record.id %}"
+                  >Delete</a
+                >
+              </div>
+
+              <div class="btn btn-outline-primary">
+                <a
+                  class="styled-link"
+                  href="{% url 'update_trade_record' record.id %}"
+                  >Edit</a
+                >
+              </div>
+            </td>
+          </tr>
+
+          {% endfor %}
+        </tbody>
+      </table>
     </div>
-
-    <table class="table table-striped table-bordered table-sm">
-      <thead>
-        <tr>
-          <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
-            <input
-              type="checkbox"
-              id="select-all"
-              onclick="toggleSelectAll()"
-            />
-          </th>
-          <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
-            Trade_Types
-          </th>
-          <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
-            Calender
-          </th>
-          <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
-            Fiscal_Year
-          </th>
-          <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
-            Duration
-          </th>
-          <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
-            Country_Name
-          </th>
-          <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
-            HS_Code
-          </th>
-          <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
-            Product_Information
-          </th>
-          <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
-            Unit
-          </th>
-          <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
-            Quantity
-          </th>
-          <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
-            Currency_Type
-          </th>
-          <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
-            Amount
-          </th>
-          <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
-            Tarrif
-          </th>
-          <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
-            Origin_Destination
-          </th>
-          <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
-            TradersName_ExporterImporter
-          </th>
-          <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
-            Documents
-          </th>
-          <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
-            Action
-          </th>
-        </tr>
-      </thead>
-      <tbody class="table-hover">
-        {% for record in page %}
-        <tr>
-          <td>
-            <input
-              type="checkbox"
-              class="item-checkbox"
-              name="selected_items"
-              value="{{ record.id }}"
-            />
-          </td>
-          <td>{{ record.Trade_Type }}</td>
-          <td>{{ record.Calender }}</td>
-          <td>{{ record.Fiscal_Year }}</td>
-          <td>{{ record.Duration }}</td>
-          <td>{{ record.Country }}</td>
-          <td>{{ record.HS_Code }}</td>
-          <td>{{ record.HS_Code.Product_Information }}</td>
-          <td>{{ record.Unit }}</td>
-          <td>{{ record.Quantity }}</td>
-          <td>{{ record.Currency_Type }}</td>
-          <td>{{ record.Amount }}</td>
-          <td>{{ record.Tarrif }}</td>
-          <td>{{ record.Origin_Destination }}</td>
-          <td>{{ record.TradersName_ExporterImporter }}</td>
-          <td>{{ record.DocumentsLegalProcedural }}</td>
-          <td class="d-flex">
-            <div class="btn btn-outline-danger">
-              <a
-                class="styled-link"
-                href="{% url 'delete_trade_record' record.id %}"
-                >Delete</a
-              >
-            </div>
-
-            <div class="btn btn-outline-primary">
-              <a
-                class="styled-link"
-                href="{% url 'update_trade_record' record.id %}"
-                >Edit</a
-              >
-            </div>
-          </td>
-        </tr>
-
-        {% endfor %}
-      </tbody>
-    </table>
-  </div>
-  <div class="pagination m-3 d-flex justify-content-center">
-    <span
-      class="step-links bg-light rounded-1 d-flex justify-content-center gap-3 p-3"
-    >
-      {% if page.has_previous %}
-      <a
-        href="?page=1{% if request.GET.currency_product_originDestination %}&currency_product_originDestination={{ request.GET.currency_product_originDestination }}{% endif %}{% if request.GET.quantity_min %}&quantity_min={{ request.GET.quantity_min }}{% endif %}{% if request.GET.quantity_max %}&quantity_max={{ request.GET.quantity_max }}{% endif %}{% if request.GET.date_min %}&date_min={{ request.GET.date_min }}{% endif %}{% if request.GET.date_max %}&date_max={{ request.GET.date_max }}{% endif %}{% if request.GET.country_category %}&country_category={{ request.GET.country_category }}{% endif %}{% if request.GET.unit_category %}&unit_category={{ request.GET.unit_category }}{% endif %}{% if request.GET.hs_code %}&hs_code={{ request.GET.hs_code }}{% endif %}{% if request.GET.trade_type %}&trade_type={{ request.GET.trade_type }}{% endif %}"
+    <div class="pagination m-3 d-flex justify-content-center">
+      <span
+        class="step-links bg-light rounded-1 d-flex justify-content-center gap-3 p-3"
       >
-        &laquo; First
-      </a>
-      <a
-        href="?page={{ page.previous_page_number }}{% if request.GET.currency_product_originDestination %}&currency_product_originDestination={{ request.GET.currency_product_originDestination }}{% endif %}{% if request.GET.quantity_min %}&quantity_min={{ request.GET.quantity_min }}{% endif %}{% if request.GET.quantity_max %}&quantity_max={{ request.GET.quantity_max }}{% endif %}{% if request.GET.date_min %}&date_min={{ request.GET.date_min }}{% endif %}{% if request.GET.date_max %}&date_max={{ request.GET.date_max }}{% endif %}{% if request.GET.country_category %}&country_category={{ request.GET.country_category }}{% endif %}{% if request.GET.unit_category %}&unit_category={{ request.GET.unit_category }}{% endif %}{% if request.GET.hs_code %}&hs_code={{ request.GET.hs_code }}{% endif %}{% if request.GET.trade_type %}&trade_type={{ request.GET.trade_type }}{% endif %}"
-      >
-        Previous
-      </a>
-      {% endif %}
+        {% if page.has_previous %}
+        <a
+          href="?page=1{% if request.GET.currency_product_originDestination %}&currency_product_originDestination={{ request.GET.currency_product_originDestination }}{% endif %}{% if request.GET.quantity_min %}&quantity_min={{ request.GET.quantity_min }}{% endif %}{% if request.GET.quantity_max %}&quantity_max={{ request.GET.quantity_max }}{% endif %}{% if request.GET.date_min %}&date_min={{ request.GET.date_min }}{% endif %}{% if request.GET.date_max %}&date_max={{ request.GET.date_max }}{% endif %}{% if request.GET.country_category %}&country_category={{ request.GET.country_category }}{% endif %}{% if request.GET.unit_category %}&unit_category={{ request.GET.unit_category }}{% endif %}{% if request.GET.hs_code %}&hs_code={{ request.GET.hs_code }}{% endif %}{% if request.GET.trade_type %}&trade_type={{ request.GET.trade_type }}{% endif %}"
+        >
+          &laquo; First
+        </a>
+        <a
+          href="?page={{ page.previous_page_number }}{% if request.GET.currency_product_originDestination %}&currency_product_originDestination={{ request.GET.currency_product_originDestination }}{% endif %}{% if request.GET.quantity_min %}&quantity_min={{ request.GET.quantity_min }}{% endif %}{% if request.GET.quantity_max %}&quantity_max={{ request.GET.quantity_max }}{% endif %}{% if request.GET.date_min %}&date_min={{ request.GET.date_min }}{% endif %}{% if request.GET.date_max %}&date_max={{ request.GET.date_max }}{% endif %}{% if request.GET.country_category %}&country_category={{ request.GET.country_category }}{% endif %}{% if request.GET.unit_category %}&unit_category={{ request.GET.unit_category }}{% endif %}{% if request.GET.hs_code %}&hs_code={{ request.GET.hs_code }}{% endif %}{% if request.GET.trade_type %}&trade_type={{ request.GET.trade_type }}{% endif %}"
+        >
+          Previous
+        </a>
+        {% endif %}
 
-      <span class="current-page">
-        Page {{ page.number }} of {{ page.paginator.num_pages }}.
+        <span class="current-page">
+          Page {{ page.number }} of {{ page.paginator.num_pages }}.
+        </span>
+
+        {% if page.has_next %}
+        <a
+          href="?page={{ page.next_page_number }}{% if request.GET.currency_product_originDestination %}&currency_product_originDestination={{ request.GET.currency_product_originDestination }}{% endif %}{% if request.GET.quantity_min %}&quantity_min={{ request.GET.quantity_min }}{% endif %}{% if request.GET.quantity_max %}&quantity_max={{ request.GET.quantity_max }}{% endif %}{% if request.GET.date_min %}&date_min={{ request.GET.date_min }}{% endif %}{% if request.GET.date_max %}&date_max={{ request.GET.date_max }}{% endif %}{% if request.GET.country_category %}&country_category={{ request.GET.country_category }}{% endif %}{% if request.GET.unit_category %}&unit_category={{ request.GET.unit_category }}{% endif %}{% if request.GET.hs_code %}&hs_code={{ request.GET.hs_code }}{% endif %}{% if request.GET.trade_type %}&trade_type={{ request.GET.trade_type }}{% endif %}"
+        >
+          Next
+        </a>
+        <a
+          href="?page={{ page.paginator.num_pages }}{% if request.GET.currency_product_originDestination %}&currency_product_originDestination={{ request.GET.currency_product_originDestination }}{% endif %}{% if request.GET.quantity_min %}&quantity_min={{ request.GET.quantity_min }}{% endif %}{% if request.GET.quantity_max %}&quantity_max={{ request.GET.quantity_max }}{% endif %}{% if request.GET.date_min %}&date_min={{ request.GET.date_min }}{% endif %}{% if request.GET.date_max %}&date_max={{ request.GET.date_max }}{% endif %}{% if request.GET.country_category %}&country_category={{ request.GET.country_category }}{% endif %}{% if request.GET.unit_category %}&unit_category={{ request.GET.unit_category }}{% endif %}{% if request.GET.hs_code %}&hs_code={{ request.GET.hs_code }}{% endif %}{% if request.GET.trade_type %}&trade_type={{ request.GET.trade_type }}{% endif %}"
+        >
+          Last &raquo;
+        </a>
+        {% endif %}
       </span>
-
-      {% if page.has_next %}
-      <a
-        href="?page={{ page.next_page_number }}{% if request.GET.currency_product_originDestination %}&currency_product_originDestination={{ request.GET.currency_product_originDestination }}{% endif %}{% if request.GET.quantity_min %}&quantity_min={{ request.GET.quantity_min }}{% endif %}{% if request.GET.quantity_max %}&quantity_max={{ request.GET.quantity_max }}{% endif %}{% if request.GET.date_min %}&date_min={{ request.GET.date_min }}{% endif %}{% if request.GET.date_max %}&date_max={{ request.GET.date_max }}{% endif %}{% if request.GET.country_category %}&country_category={{ request.GET.country_category }}{% endif %}{% if request.GET.unit_category %}&unit_category={{ request.GET.unit_category }}{% endif %}{% if request.GET.hs_code %}&hs_code={{ request.GET.hs_code }}{% endif %}{% if request.GET.trade_type %}&trade_type={{ request.GET.trade_type }}{% endif %}"
-      >
-        Next
-      </a>
-      <a
-        href="?page={{ page.paginator.num_pages }}{% if request.GET.currency_product_originDestination %}&currency_product_originDestination={{ request.GET.currency_product_originDestination }}{% endif %}{% if request.GET.quantity_min %}&quantity_min={{ request.GET.quantity_min }}{% endif %}{% if request.GET.quantity_max %}&quantity_max={{ request.GET.quantity_max }}{% endif %}{% if request.GET.date_min %}&date_min={{ request.GET.date_min }}{% endif %}{% if request.GET.date_max %}&date_max={{ request.GET.date_max }}{% endif %}{% if request.GET.country_category %}&country_category={{ request.GET.country_category }}{% endif %}{% if request.GET.unit_category %}&unit_category={{ request.GET.unit_category }}{% endif %}{% if request.GET.hs_code %}&hs_code={{ request.GET.hs_code }}{% endif %}{% if request.GET.trade_type %}&trade_type={{ request.GET.trade_type }}{% endif %}"
-      >
-        Last &raquo;
-      </a>
-      {% endif %}
-    </span>
-  </div>
+    </div>
+  </form>
 </div>
 {% endif %} {% endblock %}
