--- a/databank/general_data/templates/general_data/forest_table.html
+++ b/databank/general_data/templates/general_data/forest_table.html
@@ -1,10 +1,12 @@
 {% extends 'main.html' %} {% block content %}
 <button
-  class="btn btn-primary btn-sm px-4"
+  class="btn btn-sm px-4"
   data-bs-toggle="collapse"
   data-bs-target="#collapseFilter"
   aria-expanded="false"
   aria-controls="collapseFilter"
+  style="background-color: #419197;font-size:14px;font-weight: 500; color: white; "
+
 >
   Filters
 </button>
@@ -91,87 +93,133 @@
     </form>
   </div>
 </div>
-<form method="post" action="{% url 'delete_selected_records' %}">
-  {% csrf_token %}
-  <button type="submit">Delete Selected</button>
-  <div class="table-responsive ">
-    <table class="table table-striped table-bordered table-sm">
-      <thead>
-        <tr>
-          <th class="bg-primary text-white fw-semibold fs-6 px-2  " scope="col">
-            <input type="checkbox" name="record.id" value="record.id" id="prodect_delete">
-          </th>
-          <td class="bg-primary text-white fst-normal fw-normal  " scope="col">
-            Year
-          </td>
-          <th class="bg-primary text-white fst-normal fw-normal fs-6  " scope="col">
-            Country
-          </th>
-          <th class="bg-primary text-white fst-normal fw-normal fs-6 " scope="col">
-              Name_Of_The_Plant
-          </th>
-          <th class="bg-primary text-white fst-normal fw-normal fs-6 " scope="col">
-              Scientific_Name
-          </th>
-          <th class="bg-primary text-white fst-normal fw-normal fs-6" scope="col">
-              Local_Name
-          </th>
-          <th class="bg-primary text-white fst-normal fw-normal fs-6" scope="col">
-              Stock_Unit
-          </th>
-          <th class="bg-primary text-white fst-normal fw-normal fs-6 " scope="col">
-              Stock_Available
-          </th>
-          <th class="bg-primary text-white fst-normal fw-normal fs-6" scope="col">
-              Area_Unit
-          </th>
-          <th class="bg-primary text-white fst-normal fw-normal fs-6" scope="col">
-              Area_Covered
-          </th>
-          <th class="bg-primary text-white fst-normal fw-normal fs-6" scope="col">
-              Action
-          </th>
-        </tr>
-      </thead>
-  
-      <tbody class="table-hover">
-        {% for record in page %}
-        <tr>
-          <td class=" text-white fw-semibold fs-6 p-2" scope="col">
-            <input type="checkbox" name="selected_records" value="{{ record.id }}" id="delete_selected">
-          </td>
-          <td>{{ record.Year }}</td>
-          <td>{{ record.Country }}</td>
-          <td>{{ record.Name_Of_The_Plant }}</td>
-          <td>{{ record.Scientific_Name }}</td>
-          <td>{{ record.Local_Name }}</td>
-          <td>{{ record.Stock_Unit }}</td>
-          <td>{{ record.Stock_Available }}</td>
-          <td>{{ record.Area_Unit }}</td>
-          <td>{{ record.Area_Covered }}</td>
-          <td class="d-flex">
-            <div class="btn btn-outline-danger">
-              <a
-                class="styled-link"
-                href="{% url 'delete_trade_record' record.id %}"
-                >Delete</a>
-            </div>
-  
-            <div class="btn btn-outline-primary">
-              <a
-                class="styled-link"
-                href="{% url 'update_forest_record' record.id %}"
-                >Edit</a>
-            </div>
-          </td>
-        </tr>
-  
-        {% endfor %}
-      </tbody>
-    </table>
-  </div>
-</form>
+<div>
+  <form method="post" action="{% url 'delete_selected' %}" id="delete-form">
+    {% csrf_token %}
+    <div class="table-responsive mt-4 bg-light">
+      <div class="d-flex align-items-center justify-content-between mb-3">
+        <span class="text-danger fs-6 fw-lighter mb-1">
+          * {{data_len}} records found.
+        </span>
+        <div class="d-flex align-items-center py-2">
+          <button type="button" class="btn border p-2 styled-link mx-3 hover-shadow" onclick="confirmDeleteAll()">
+            <i class="fa-regular fa-trash-can" style="color: #ff0000"></i>
+              <span>Delete Selected</span>
+          </button>
+            <a
+              href="{% url 'export_forest_table_to_excel' %}?{{ request.GET.urlencode }}"
+              class="border p-2 styled-link"
+            >
+            <i class="fa-solid fa-table"></i>
+            <span>Export to Excel</span>
+            </a>
+          
+        </div>
+      </div>
+      <table class="table table-striped table-bordered table-sm">
+        <thead>
+          <tr>
+            <th class="text-white fw-semibold fs-6   " scope="col"  style="background:#12486B;">
+              <input
+              type="checkbox"
+              id="select-all"
+              onclick="toggleSelectAll()"
+            />
+            </th>
+            <th class="text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
+              Year
+            </th>
+            <th class="text-white fst-normal  " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;" >
+              Country
+            </th>
+            <th class=" text-white fst-normal  " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
+                Name_Of_The_Plant
+            </th>
+            <th class=" text-white fst-normal  " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
+                Scientific_Name
+            </th>
+            <th class=" text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
+                Local_Name
+            </th>
+            <th class=" text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
+                Stock_Unit
+            </th>
+            <th class=" text-white fst-normal  " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
+                Stock_Available
+            </th>
+            <th class=" text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
+                Area_Unit
+            </th>
+            <th class=" text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
+                Area_Covered
+            </th>
+            <th class=" text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
+                Action
+            </th>
+          </tr>
+        </thead>
+    
+        <tbody class="table-hover">
+          {% for record in page %}
+          <tr>
+            <td class=" text-white fw-semibold fs-6" scope="col">
+              <input
+              type="checkbox"
+              class="item-checkbox"
+              name="selected_items"
+              value="{{ record.id }}"
+            />
+            </td>
+            <td >{{ record.Year }}</td>
+            <td>{{ record.Country }}</td>
+            <td>{{ record.Name_Of_The_Plant }}</td>
+            <td>{{ record.Scientific_Name }}</td>
+            <td>{{ record.Local_Name }}</td>
+            <td>{{ record.Stock_Unit }}</td>
+            <td>{{ record.Stock_Available }}</td>
+            <td>{{ record.Area_Unit }}</td>
+            <td>{{ record.Area_Covered }}</td>
+            <td class="d-flex">
+              <div class="btn">
+                <a
+                  class=""
+                  id="delete_forest"
+                  onclick="confirmDelete('{{record.id}}')"
+                  ><i class="fa-regular fa-trash-can" style="color: #ff0000"></i></a>
+                  
+              </div>
+    
+              <div class="btn ">
+                <a
+                  class=""
+                  href="{% url 'update_forest_record' record.id %}"
+                  ><i class="fa-regular fa-pen-to-square" style="color: rgb(3, 10, 86)"></i></a>
+              </div>
+            </td>
+          </tr>
+    
+          {% endfor %}
+        </tbody>
+      </table>
+    </div>
+    </div>
+  </form>
+</div>
 
-  
+
+
+<script>
+  function confirmDelete(itemId) {
+      var result = confirm("Are you sure you want to delete this record?");
+      if (result) {
+          // User clicked "OK"
+          // Redirect to the Django view for deleting the item
+          window.location.href = 'delete_forest_record/' + itemId + '/';
+      } else {
+          // User clicked "Cancel" or closed the dialog
+          alert("Delete canceled!");
+      }
+  }
+  </script>
   
 {% endblock %}
