--- a/databank/templates/navbar.html
+++ b/databank/templates/navbar.html
@@ -81,6 +81,13 @@
                   >Upload Trade Data File</a
                 >
               </li>
+              <li class="nav-item">
+                <a
+                  class="dropdown-item"
+                  href="{% url 'upload_forest_excel' %}"
+                  >Upload forest data file</a
+                >
+              </li>
             </ul>
           </li>
 
