form styling and form edit error

--- a/databank/trade_data/templates/trade_data/display_trade_table.html
+++ b/databank/trade_data/templates/trade_data/display_trade_table.html
@@ -254,15 +254,13 @@
                   ><i class="fa-regular fa-trash-can" style="color: #ff0000"></i></a>
                   
               </div>
-
-              <div class="btn btn-outline-primary">
+              <div class="btn ">
                 <a
-                  class="styled-link"
+                  class=""
                   href="{% url 'update_trade_record' record.id %}"
-                  >Edit</a
-                >
+                  ><i class="fa-regular fa-pen-to-square" style="color: rgb(3, 10, 86)"></i></a>
               </div>
-            </td>
+            </td> 
           </tr>
 
           {% endfor %}
