--- a/databank/trade_data/templates/trade_data/display_trade_table.html
+++ b/databank/trade_data/templates/trade_data/display_trade_table.html
@@ -1,11 +1,12 @@
 {% extends 'main.html' %} {% block content %}
 
 <button
-  class="btn btn-primary btn-sm px-4"
+  class="btn btn-sm px-4"
   data-bs-toggle="collapse"
   data-bs-target="#collapseFilter"
   aria-expanded="false"
   aria-controls="collapseFilter"
+  style="background-color: #419197;font-size:14px;font-weight: 500; color: white;"
 >
   Filters
 </button>
@@ -21,110 +22,114 @@
   {% endif %}
 </div>
 
-<div class="bg-light mt-2">
-  <div class="collapse shadow rounded-2 p-4" id="collapseFilter">
-    <form class="row g-3" method="GET" action=".">
-      <!-- <div class="form-group col-12">
-                <div class="input-group">
-                    <input class="form-control py-2 border-right-0 border" type="search"
-                        name="currency_product_originDestination"
-                        placeholder="Search by Currency Type, Product Information or Origin/Destination" />
-    
-                </div>
-            </div> -->
+<div class="bg-light mt-3">
+  <div class="collapse shadow rounded-2 " id="collapseFilter">
+    <div class="px-2 py-2"> 
+      <form class="row g-3" method="GET" action=".">
+        <!-- <div class="form-group col-12">
+                  <div class="input-group">
+                      <input class="form-control py-2 border-right-0 border" type="search"
+                          name="currency_product_originDestination"
+                          placeholder="Search by Currency Type, Product Information or Origin/Destination" />
+      
+                  </div>
+              </div> -->
 
-      <div class="col-md-3">
-        <label for="date_minimum">Calender Date Minimum</label>
-        <input
-          type="date"
-          class="form-control"
-          id="date_minimum"
-          name="date_min"
-        />
-      </div>
-      <div class="col-md-3">
-        <label for="date_maximum">Calender Date Maximum</label>
-        <input
-          type="date"
-          class="form-control"
-          id="date_maximum"
-          name="date_max"
-        />
-      </div>
+        <div class="col-md-3">
+          <label for="date_minimum">Calender Date Minimum</label>
+          <input
+            type="date"
+            class="form-control"
+            id="date_minimum"
+            name="date_min"
+          />
+        </div>
+        <div class="col-md-3">
+          <label for="date_maximum">Calender Date Maximum</label>
+          <input
+            type="date"
+            class="form-control"
+            id="date_maximum"
+            name="date_max"
+          />
+        </div>
 
-      <div class="col-md-3">
-        <label for="viewCountMin">Minimum Quantity</label>
-        <input
-          type="number"
-          min="0"
-          class="form-control"
-          id="viewCountMin"
-          placeholder="0"
-          name="quantity_min"
-        />
-      </div>
-      <div class="col-md-3">
-        <label for="viewCountMax">Maximum Quantity</label>
-        <input
-          type="number"
-          min="0"
-          class="form-control"
-          id="viewCountMax"
-          placeholder="1000"
-          name="quantity_max"
-        />
-      </div>
+        <div class="col-md-3">
+          <label for="viewCountMin">Minimum Quantity</label>
+          <input
+            type="number"
+            min="0"
+            class="form-control"
+            id="viewCountMin"
+            placeholder="0"
+            name="quantity_min"
+          />
+        </div>
+        <div class="col-md-3">
+          <label for="viewCountMax">Maximum Quantity</label>
+          <input
+            type="number"
+            min="0"
+            class="form-control"
+            id="viewCountMax"
+            placeholder="1000"
+            name="quantity_max"
+          />
+        </div>
 
-      <div class="form-group col-md-3">
-        <label for="trade_type">Trade Type</label>
-        <select id="trade_type" class="form-control" name="trade_type">
-          <option selected>--</option>
-          {% for trade_type in trade_type_categories %}
-          <option value="{{trade_type}}">{{trade_type}}</option>
-          {% endfor %}
-        </select>
-      </div>
+        <div class="form-group col-md-3">
+          <label for="trade_type">Trade Type</label>
+          <select id="trade_type" class="form-control" name="trade_type">
+            <option selected>--</option>
+            {% for trade_type in trade_type_categories %}
+            <option value="{{trade_type}}">{{trade_type}}</option>
+            {% endfor %}
+          </select>
+        </div>
 
-      <div class="form-group col-md-3">
-        <label for="country_category">Origin Destination</label>
-        <select
-          id="country_category"
-          class="form-control"
-          name="country_category"
-        >
-          <option selected>--</option>
-          {% for country_category in country_categories %}
-          <option value="{{country_category.id}}">{{country_category}}</option>
-          {% endfor %}
-        </select>
-      </div>
+        <div class="form-group col-md-3">
+          <label for="country_category">Origin Destination</label>
+          <select
+            id="country_category"
+            class="form-control"
+            name="country_category"
+          >
+            <option selected>--</option>
+            {% for country_category in country_categories %}
+            <option value="{{country_category.id}}">{{country_category}}</option>
+            {% endfor %}
+          </select>
+        </div>
 
-      <div class="form-group col-md-3">
-        <label for="unit_category">Unit</label>
-        <select id="unit_category" class="form-control" name="unit_category">
-          <option selected>--</option>
-          {% for unit_category in unit_categories %}
-          <option value="{{unit_category.id }}">{{unit_category}}</option>
-          {% endfor %}
-        </select>
-      </div>
+        <div class="form-group col-md-3">
+          <label for="unit_category">Unit</label>
+          <select id="unit_category" class="form-control" name="unit_category">
+            <option selected>--</option>
+            {% for unit_category in unit_categories %}
+            <option value="{{unit_category.id }}">{{unit_category}}</option>
+            {% endfor %}
+          </select>
+        </div>
 
-      <div class="form-group col-md-3">
-        <label for="hs_code">HS Code</label>
-        <select id="hs_code" class="form-control" name="hs_code">
-          <option selected>--</option>
-          {% for hs_code in hs_codes %}
-          <option value="{{hs_code.id }}">
-            {{hs_code}} - {{hs_code.Product_Information}}
-          </option>
-          {% endfor %}
-        </select>
-      </div>
+        <div class="form-group col-md-3">
+          <label for="hs_code">HS Code</label>
+          <select id="hs_code" class="form-control" name="hs_code">
+            <option selected>--</option>
+            {% for hs_code in hs_codes %}
+            <option value="{{hs_code.id }}">
+              {{hs_code}} - {{hs_code.Product_Information}}
+            </option>
+            {% endfor %}
+          </select>
+        </div>
 
-      <button type="submit" class="col-md-1 btn btn-sm btn-primary">
-        Search
-      </button>
-    </form>
+        <div class="col-md-3 d-flex align-items-end">
+          <button type="submit" class="col-md-1 btn btn-sm btn-primary">
+          Search
+          </button>
+        </div>
+      </form>
+    </div>
   </div>
 </div>
 <div class="fs-4 fw-bold text-center mt-4">Trade Data</div>
@@ -138,23 +143,22 @@
   <form method="post" action="{% url 'delete_selected_trade' %}" id="delete-form-trade">
     {% csrf_token %}
     <div class="table-responsive mt-4 bg-light p-3">
-      <div class="d-flex align-items-center justify-content-between mb-3">
+      <div class="d-flex align-items-center justify-content-between px-2">
         <span class="text-danger fs-6 fw-lighter mb-1">
           * {{data_len}} records found.
         </span>
 
-        <div class="d-flex align-items-center">
+        <div class="d-flex align-items-center py-2">
           <button type="button" class="btn border p-2 styled-link mx-3 hover-shadow" onclick="confirmDeleteAll()">
             <i class="fa-regular fa-trash-can" style="color: #ff0000"></i>
               <span>Delete Selected</span>
-            </a>
           </button>
           <a
             href="{% url 'export_to_excel' %}?{{ request.GET.urlencode }}"
             class="border p-2 styled-link"
           >
             <i class="fa-solid fa-table"></i>
-            <span>Export to Excel</span>
+            <span class="fw-normal" >Export to Excel</span>
           </a>
         </div>
       </div>
@@ -162,59 +166,59 @@
       <table class="table table-striped table-bordered table-sm">
         <thead>
           <tr>
-            <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
+            <th class="text-white fw-semibold fs-6 " scope="col" style="background:#12486B;" >
               <input
                 type="checkbox"
                 id="select-all"
                 onclick="toggleSelectAll()"
               />
             </th>
-            <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
+            <th class="text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;"" scope="col">
               Trade_Types
             </th>
-            <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
+            <th class="text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;"" scope="col">
               Calender
             </th>
-            <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
+            <th class="text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;"" scope="col">
               Fiscal_Year
             </th>
-            <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
+            <th class="text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;"" scope="col">
               Duration
             </th>
-            <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
+            <th class="text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;"" scope="col">
               Country_Name
             </th>
-            <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
+            <th class="text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;"" scope="col">
               HS_Code
             </th>
-            <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
+            <th class="text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;"" scope="col">
               Product_Information
             </th>
-            <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
+            <th class="text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;"" scope="col">
               Unit
             </th>
-            <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
+            <th class="text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;"" scope="col">
               Quantity
             </th>
-            <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
+            <th class="text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;"" scope="col">
               Currency_Type
             </th>
-            <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
+            <th class="text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;"" scope="col">
               Amount
             </th>
-            <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
+            <th class="text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;"" scope="col">
               Tarrif
             </th>
-            <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
+            <th class="text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;"" scope="col">
               Origin_Destination
             </th>
-            <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
+            <th class="text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;"" scope="col">
               TradersName_ExporterImporter
             </th>
-            <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
+            <th class="text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;"" scope="col">
               Documents
             </th>
-            <th class="bg-primary text-white fw-semibold fs-6 p-2" scope="col">
+            <th class="text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;"" scope="col">
               Action
             </th>
           </tr>
@@ -222,7 +226,7 @@
         <tbody class="table-hover">
           {% for record in page %}
           <tr>
-            <td>
+            <td class=" text-white fw-semibold fs-6" scope="col" >
               <input
                 type="checkbox"
                 class="item-checkbox"
