remove add trade record link from sidebar

--- a/databank/templates/navbar.html
+++ b/databank/templates/navbar.html
@@ -116,14 +116,16 @@
             </ul>
           </li>
 
-          <li class="nav-item">
+          <!-- Upload single record -->
+
+          <!-- <li class="nav-item">
             <a
               class="nav-link active"
               aria-current="page"
               href="{% url 'upload_trade_record' %}"
               >Add Trade Data</a
             >
-          </li>
+          </li> -->
         </ul>
        
       </div>
