display tables ,updated viewsand path

--- a/databank/general_data/templates/general_data/land_templates/land_table.html
+++ b/databank/general_data/templates/general_data/land_templates/land_table.html
@@ -126,6 +126,11 @@
 </div>
 <div class="fs-4 fw-bold text-center">Land Data</div>
 
+{% if query_len == 0 %}
+<div class="bg-light p-4 text-center fw-normal mt-4 text-danger">
+  No Records
+</div>
+{% else %}
 <div>
   <form method="post" action="{% url 'delete_selected_land' %}" id="delete-form-land">
     {% csrf_token %}
@@ -140,7 +145,7 @@
               <span class="fw-normal">Delete Selected</span>
           </button>
             <a
-              href="{% url 'export_forest_table_to_excel' %}?{{ request.GET.urlencode }}"
+              href="{% url 'export_land_table_to_excel' %}?{{ request.GET.urlencode }}"
               class="border p-2 styled-link"
             >
             <i class="fa-solid fa-table"></i>
@@ -227,6 +232,8 @@
     </div>
   </form>
 </div>
+
+{% endif %}
 
 
 
