--- a/databank/general_data/templates/general_data/forest_table.html
+++ b/databank/general_data/templates/general_data/forest_table.html
@@ -114,6 +114,11 @@
 </div>
 <div class="fs-4 fw-bold text-center">Forest Data</div>
 
+{% if query_len == 0 %}
+<div class="bg-light p-4 text-center fw-normal mt-4 text-danger">
+  No Records
+</div>
+{% else %}
 <div>
   <form method="post" action="{% url 'delete_selected_forest' %}" id="delete-form-forest">
     {% csrf_token %}
@@ -226,6 +231,8 @@
     </div>
   </form>
 </div>
+
+{% endif %}
 
 
 
