--- a/databank/general_data/templates/general_data/hotel_templates/hotel_table.html
+++ b/databank/general_data/templates/general_data/hotel_templates/hotel_table.html
@@ -60,16 +60,7 @@
           />
         </div>
   
-        <div class="col-md-3">
-          <label for="ViewNameOfPlant">Name of the plant </label>
-          <input
-            type="text"
-            class="form-control"
-            id="view_plant_Name"
-            placeholder="e.g. saal"
-            name="name_of_the_plant"
-          />
-        </div>
+        
         <div class="form-group col-md-3">
           <label for="country_category">Country</label>
           <select
@@ -84,23 +75,23 @@
           </select>
         </div>
         <div class="col-md-3">
-          <label for="viewAreaUnit">Area Unit</label>
-          <select id="area_unit" name="area_unit" class="form-control">
-            <option selected>--</option>
-            {% for area_unit in area_unit_categories %}
-            <option value="{{area_unit.id}}">{{area_unit}}</option>
-            {% endfor %}
-          </select>
+          <label for="ViewNameOfPlant">Name of the Hotel </label>
+          <input
+            type="text"
+            class="form-control"
+            id="view_hotel_Name"
+            placeholder="e.g. Himalayan"
+            name="name_of_the_hotel"
+          />
         </div>
         <div class="col-md-3">
-          <label for="viewStockAvailable">Stock Available</label>
+          <label for="ViewNameOfPlant">City</label>
           <input
-            type="number"
-            min="0"
+            type="text"
             class="form-control"
-            id="viewStockAvailable"
-            placeholder="1000"
-            name="stock_available"
+            id="view_city_Name"
+            placeholder="e.g. Himalayan"
+            name="name_of_the_city"
           />
         </div>
         <div class="col-md-3 d-flex align-items-end">
@@ -113,6 +104,13 @@
   </div>
 </div>
 <div class="fs-4 fw-bold text-center">Hotel Data</div>
+
+
+{% if query_len == 0 %}
+<div class="bg-light p-4 text-center fw-normal mt-4 text-danger">
+  No Records
+</div>
+{% else %}
 
 <div>
   <form method="post" action="{% url 'delete_selected_hotel' %}" id="delete-form-hotel">
@@ -128,7 +126,7 @@
               <span class="fw-normal">Delete Selected</span>
           </button>
             <a
-              href="{% url 'export_forest_table_to_excel' %}?{{ request.GET.urlencode }}"
+              href="{% url 'export_hotel_table_to_excel' %}?{{ request.GET.urlencode }}"
               class="border p-2 styled-link"
             >
             <i class="fa-solid fa-table"></i>
@@ -214,6 +212,8 @@
     </div>
   </form>
 </div>
+
+{% endif %}
 
 
 
