--- a/databank/general_data/templates/general_data/tourism_templates/tourism_table.html
+++ b/databank/general_data/templates/general_data/tourism_templates/tourism_table.html
@@ -114,6 +114,12 @@
 </div>
 <div class="fs-4 fw-bold text-center">Tourism Data</div>
 
+{% if query_len == 0 %}
+<div class="bg-light p-4 text-center fw-normal mt-4 text-danger">
+  No Records
+</div>
+{% else %}
+
 <div>
   <form method="post" action="{% url 'delete_selected_tourism' %}" id="delete-form-tourism">
     {% csrf_token %}
@@ -128,7 +134,7 @@
               <span class="fw-normal">Delete Selected</span>
           </button>
             <a
-              href="{% url 'export_forest_table_to_excel' %}?{{ request.GET.urlencode }}"
+              href="{% url 'export_tourism_table_to_excel' %}?{{ request.GET.urlencode }}"
               class="border p-2 styled-link"
             >
             <i class="fa-solid fa-table"></i>
@@ -214,6 +220,8 @@
     </div>
   </form>
 </div>
+
+{% endif %}
 
 
 
