download error excel file

--- a/databank/trade_data/templates/trade_data/error_template.html
+++ b/databank/trade_data/templates/trade_data/error_template.html
@@ -5,7 +5,7 @@
 
     <div class="alert alert-danger " role="alert">
         Cannot add the following records.
-        <a href="{% url 'download_duplicate_excel' %}" class="alert-link">Export to Excel?</a>
+        <a href="{% url 'download_error_excel' %}" class="alert-link">Export to Excel?</a>
     </div>
 
         <div class="table-responsive mt-4 bg-light p-3">
