filter completed in tourism

--- a/databank/general_data/templates/general_data/forest_table.html
+++ b/databank/general_data/templates/general_data/forest_table.html
@@ -88,7 +88,7 @@
           <select id="area_unit" name="area_unit" class="form-control">
             <option selected>--</option>
             {% for area_unit in area_unit_categories %}
-            <option value="{{area_unit.id}}">{{area_unit}}</option>
+            <option value="{{area_unit}}">{{area_unit}}</option>
             {% endfor %}
           </select>
         </div>
