import data and update with id, no id insert,message notifications

--- a/databank/general_data/templates/general_data/forest_table.html
+++ b/databank/general_data/templates/general_data/forest_table.html
@@ -1,7 +1,7 @@
 {% extends 'main.html' %} {% block content %}
 <div class="d-flex">
   <button
-  class="btn btn-sm px-4"
+  class="btn btn-md px-6"
   data-bs-toggle="collapse"
   data-bs-target="#collapseFilter"
   aria-expanded="false"
@@ -230,7 +230,7 @@
     </div>
     </div>
   </form>
-</div>
+</div> 
 
 {% endif %}
 
