--- a/databank/templates/main.html
+++ b/databank/templates/main.html
@@ -1,56 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DataBank</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://kit.fontawesome.com/01571c4cf7.js"
-      crossorigin="anonymous"
-    ></script>
 
-    <style>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>DataBank</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+  <script src="https://kit.fontawesome.com/01571c4cf7.js" crossorigin="anonymous"></script>
 
-      .styled-link {
-        text-decoration: none;
-        color: black;
-        transition: box-shadow 0.3s;
-      }
+  <style>
+    .styled-link {
+      text-decoration: none;
+      color: black;
+      transition: box-shadow 0.3s;
+    }
 
-      .styled-link:hover {
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* Add the shadow effect on hover */
-      }
-    </style>
-  </head>
+    .styled-link:hover {
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+      /* Add the shadow effect on hover */
+    }
+  </style>
+</head>
 
-  <body class="bg-body-secondary">
-    {% include 'navbar.html' %}
+<body class="bg-body-secondary">
+  {% include 'navbar.html' %}
 
-    <div class="container fw-light pt-3">
-      {% block content %} {% endblock %}
+  <div class="container fw-light pt-3">
+
+    <div>
+      {% if messages %}
+      {% for m in messages %}
+      <div class="alert {{m.tags}} px-1 py-1 alert-dismissible mt-2 custom-alert" role="alert">
+        {{m}}
+        <button type="button" class="btn-close px-2 py-2 " data-bs-dismiss="alert" aria-label="Close"></button>
+      </div>
+      {% endfor %}
+      {% endif %}
     </div>
-    <script>
-      // Function to handle "Select All" checkbox
-      function toggleSelectAll() {
-        const checkboxes = document.querySelectorAll(".item-checkbox");
-        const selectAllCheckbox = document.getElementById("select-all");
 
-        checkboxes.forEach((checkbox) => {
-          checkbox.checked = selectAllCheckbox.checked;
-        });
-      }
+    {% block content %} {% endblock %}
+  </div>
+  <script>
+    // Assuming you have added the class 'custom-alert' to your alert messages
+    var alertMessages = document.querySelectorAll('.custom-alert');
 
-    </script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+    alertMessages.forEach(function (alertMessage) {
+      setTimeout(function () {
+        alertMessage.style.transition = "opacity 2s";
+        alertMessage.style.opacity = '0';
+
+        setTimeout(function () {
+          alertMessage.style.display = 'none';
+        }, 3000);
+      }, 3000);
+    });
+
+    // Function to handle "Select All" checkbox
+    function toggleSelectAll() {
+      const checkboxes = document.querySelectorAll(".item-checkbox");
+      const selectAllCheckbox = document.getElementById("select-all");
+
+      checkboxes.forEach((checkbox) => {
+        checkbox.checked = selectAllCheckbox.checked;
+      });
+    }
+
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
