--- a/databank/templates/navbar.html
+++ b/databank/templates/navbar.html
@@ -88,6 +88,15 @@
                   >Upload forest data file</a
                 >
               </li>
+              <li class="nav-item">
+                <a
+                  class="dropdown-item"
+                  href="{% url 'upload_population_excel' %}"
+                  >Upload populaton data file</a
+                >
+              </li>
+
+
             </ul>
           </li>
 
