land show land dup and export

--- a/databank/templates/navbar.html
+++ b/databank/templates/navbar.html
@@ -95,6 +95,13 @@
                   >Upload populaton data file</a
                 >
               </li>
+              <li class="nav-item">
+                <a
+                  class="dropdown-item"
+                  href="{% url 'upload_land_excel' %}"
+                  >Upload land data file</a
+                >
+              </li>
 
 
             </ul>
