upload finished for ,pop,land,tour,wat,trans,hotel.

--- a/databank/templates/navbar.html
+++ b/databank/templates/navbar.html
@@ -102,7 +102,36 @@
                   >Upload land data file</a
                 >
               </li>
+              <li class="nav-item">
+                <a
+                  class="dropdown-item"
+                  href="{% url 'upload_transport_excel' %}"
+                  >Upload Transport data file</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="dropdown-item"
+                  href="{% url 'upload_hotel_excel' %}"
+                  >Upload Hotel data file</a
+                >
+              </li>
 
+              <li class="nav-item">
+                <a
+                  class="dropdown-item"
+                  href="{% url 'upload_water_excel' %}"
+                  >Upload Water data file</a
+                >
+              </li>
+
+              <li class="nav-item">
+                <a
+                  class="dropdown-item"
+                  href="{% url 'upload_tourism_excel' %}"
+                  >Upload Tourism data file</a
+                >
+              </li>
 
             </ul>
           </li>
